# LibreUPC

./: .coverage  .gitignore  pyproject.toml
libreupc/: app.py
libreupc/models/: product.py
src/libreupc/: app.py
src/libreupc/models/: common.py  product.py  user.py
